# prime-number-calc

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: README.md  build.yml
include/: prime_calculator.h
scripts/: check-workflow.sh
src/: prime_calculator.cpp  prime_calculator_impl.cpp
tests/: CMakeLists.txt  test_prime_calculator.cpp
